# Tunno

./: CLAUDE.md  LICENSE  README.md  eslint.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.agents/: api-patterns.md  architecture.md  cli.md  database.md  desktop.md  mobile.md
.agents/skills/vercel-composition-patterns/: SKILL.md
.agents/skills/vercel-react-best-practices/: AGENTS.md
.agents/skills/vercel-react-native-skills/: AGENTS.md
.claude/: settings.local.json
.claude/commands/: git-commit.md
.claude/skills/expo-cicd-workflows/: SKILL.md
.claude/skills/expo-deployment/: SKILL.md
.claude/skills/expo-dev-client/: SKILL.md
.claude/skills/vercel-composition-patterns/: AGENTS.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: deploy-web.yml  dev-build-mobile.yml  release-cli.yml  release-desktop.yml  release-mobile.yml
.husky/: pre-commit
apps/cli/: .npmignore  CHANGELOG.md  README.md  package-lock.json  package.json  tsconfig.json
apps/cli/src/: index.ts
apps/desktop/: CHANGELOG.md  README.md  drizzle.config.ts  fullscreenPlayer.html  global.d.ts  index.html  miniPlayer.html  package-lock.json  package.json  tailwind.config.ts  tauri.d.ts  tsconfig.json  vite.config.ts
apps/desktop/src/: fullscreenPlayer.tsx  global.css  main.tsx  miniPlayer.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  desktop.json
apps/desktop/src-tauri/migrations/: 0000_bitter_starhawk.sql  0000_handy_bullseye.sql  0000_parallel_zarek.sql  0000_smart_callisto.sql  0000_solid_eternals.sql  0000_strange_pandemic.sql  0000_thin_vance_astro.sql  0000_tranquil_chronomancer.sql  0000_true_thunderbird.sql  0001_short_eternity.sql
apps/desktop/src-tauri/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
apps/desktop/src-tauri/src/: api.rs  fast_upload.rs  fastupload.rs  lib.rs  main.rs  sync.rs  utils.rs
apps/desktop/src-tauri/src/api/: auth.rs  commands.rs  db.rs  file_routes.rs  mod.rs  sync_routes.rs
apps/mobile/: CHANGELOG.md  README.md  app.config.ts  app.json  babel.config.js  drizzle.config.ts  eas.json  index.ts  metro.config.js  package-lock.json  package.json  tsconfig.json
apps/mobile/app/: _layout.tsx  database.tsx  lyrics.tsx  queue.tsx  settings.tsx
apps/mobile/constants/: expo.ts
apps/mobile/contexts/: TabbarContext.tsx
apps/mobile/database/: client.ts  helpers.ts
apps/mobile/hooks/: useColorTheme.ts  useDelayedMount.ts  useImageColorAndPalette.ts  useResponsiveColumns.ts  useStickToIndex.ts  useThumbnailUri.ts
apps/mobile/lib/: appStorage.ts  utils.ts
apps/mobile/migrations/: 0000_minor_micromax.sql  0000_mysterious_gorilla_man.sql  0000_sad_slayback.sql  0000_sparkling_cable.sql  0000_thankful_vision.sql  0000_worried_virginia_dare.sql  0002_aberrant_gravity.sql  0003_ambiguous_obadiah_stane.sql  migrations.js
apps/web/: README.md  eslint.config.mjs  next.config.ts  package.json  postcss.config.mjs  tsconfig.json
config/eslint/: base.mjs  index.mjs  next.mjs  node.mjs  react-native.mjs  react.mjs
config/typescript/: tsconfig.package.json
desktop/: latest.json
patches/: react-native-track-player@5.0.0-alpha0.patch
scripts/: bump-version.ts  shadcnui.ts
(+1097 files in other folders)
